fix gap

--- a/src/components/ListItems/listItems.scss
+++ b/src/components/ListItems/listItems.scss
@@ -1,7 +1,7 @@
 .container-list-items {
     padding: 10vh 10px;
     display: grid;
-    gap: 10px;
+    gap: 2.5px;
     grid-template-columns: 1fr 1fr;
     justify-content: center;
 }
